--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     #result {
       margin-top: 20px;
       font-size: 1.5em;
-      color: green;
+      color: red;
     }
     #capture-btn {
       margin-top: 20px;
